[gd_scene load_steps=7 format=2]

[ext_resource path="res://combat/weapons/damage_source/DamageSource.tscn" type="PackedScene" id=1]
[ext_resource path="res://combat/weapons/lasers/LaserEndParticles.tscn" type="PackedScene" id=2]
[ext_resource path="res://combat/weapons/Laser.gd" type="Script" id=3]
[ext_resource path="res://combat/weapons/lasers/LaserStartParticles.tscn" type="PackedScene" id=4]
[ext_resource path="res://core/ray_cast_line_2d/Red5.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
resource_local_to_scene = true

[node name="Laser" type="Node2D"]
script = ExtResource( 3 )
ray_cast_line_2d_scene = ExtResource( 5 )
laser_start_particles_scene = ExtResource( 4 )
laser_end_particles_scene = ExtResource( 2 )

[node name="DamageTick" type="Timer" parent="."]
wait_time = 0.05

[node name="DamageSource" parent="." instance=ExtResource( 1 )]
damage = 5

[node name="CollisionShape2D" parent="DamageSource" index="0"]
shape = SubResource( 1 )

[node name="RayCasts" type="Node2D" parent="."]

[node name="RayCastTop" type="RayCast2D" parent="RayCasts"]
position = Vector2( 0, -8 )
enabled = true
cast_to = Vector2( 100, 0 )
collision_mask = 4

[node name="RayCastBottom" type="RayCast2D" parent="RayCasts"]
position = Vector2( 0, 8 )
enabled = true
cast_to = Vector2( 100, 0 )
collision_mask = 4
[connection signal="timeout" from="DamageTick" to="." method="_on_DamageTick_timeout"]

[editable path="DamageSource"]
